tests/ui/parser/issue-68987-unmatch-issue-1.stderr
error: unexpected closing delimiter: `}`
  --> $DIR/issue-68987-unmatch-issue-1.rs:10:1
   |
LL |         None => {}
   |                 -- block is empty, you might have not meant to close it
LL |     }
LL | }
   | ^ unexpected closing delimiter

error: aborting due to previous error

